# migrations

./: .gitignore  README.md  VHOL-Migrations-2025-12-03.pptx  setenv.sh
AdventureWorks/: restore-AdventureWorks-sample.sql
AdventureWorks/AdventureWorks-oltp-install-script/: instawdb.sql
AdventureWorks/_AW_modifications/: HumanResources.Employee-hierarchyid-column.sql  Person.Address-geography-column.sql  Production.Document-hierarchyid-column.sql  find-all-geography.sql  find-all-hierarchyid.sql
pipeline/: cleanup.sh  run_pipeline_notebook.sh  run_pyspark_shell.sh  run_snowpark_pipeline.sh  run_snowpark_pipeline_cli_notebook.sh  run_snowpark_pipeline_notebook.sh  setup_snowflake.sh
pipeline-connect/: cleanup_snowflake_stage.sh  pyproject.toml  reset_pipeline.sh  run_snowpark_pipeline.sh  setup_snowflake.sh
pipeline-connect/source_code/: Basic Reporting Notebook - Snowflake.ipynb  pipeline_dimcustomer.py
pipeline-snowpark/source_code/: checkpoints.json  demotest2.snowma  pyproject.toml  reset_pipeline.sh
pipeline-spark/: Dockerfile.notebook  Dockerfile.spark  docker-compose.yml  run_pipeline.sh  run_pipeline_notebook.sh  run_pyspark_shell.sh
pipeline-spark/conf/: log4j2.properties
pipeline-spark/source_code/: Basic Reporting Notebook - SqlServer Spark.ipynb  pipeline_dimcustomer.py  sql_server_credentials.txt
pipeline/conf/: log4j2.properties
pipeline/source_code/: Basic Reporting Notebook - SqlServer Spark.ipynb  customer_update.csv  environment.yml  (+3 more)
snowflake-db-additions/: additional-objects.sql
ui/: streamlit_salesperson_dashboard.py
(+135 files in other folders)
